# FillEstimation

./: .gitignore  LDFIX.sh  LICENSE  Makefile  README.md  env.sh  gsl.sh  oski.sh  proposal.tex  report.tex  taco.sh
oski-1.0.1h/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  configure  configure.ac
oski-1.0.1h/autom4te.cache/: output.0
oski-1.0.1h/bench/: Make.BCSR_MatMult  Make.CSC_MatMult  Make.CSC_MatTrisolve  Make.CSR_MatMult  Make.CSR_MatTrisolve  Make.CSR_SymmMatMult  Make.GCSR_MatMult  Make.MBCSR_MatMultAndMatTransMult  Make.MBCSR_MatTransMatMult  Make.MBCSR_MatTrisolve  Make.MBCSR_SymmMatMult  Make.bench  Makefile.am  Makefile.in  autotune.c  bench.c  genprof-MatMult-CB.sh  genprof-MatMult-DENSE.sh  genprof-MatMult-MATSTD.sh  genprof-MatMult.sh  genprof-MatMultAndMatTransMult-MATSTD.sh  genprof-MatMultAndMatTransMult.sh  genprof-MatPowMult-MATSTD.sh  genprof-MatTransMatMult-MATSTD.sh  genprof-MatTransMatMult.sh  genprof-MatTrisolve-DENSE.sh  genprof-MatTrisolve.sh  genprof-begin.sh  genprof-common.sh  genprof-end.sh  genprof-loop2d.sh  keropts.c  keropts.h  matopts.c  workload.c
oski-1.0.1h/config/: config-h.in  ltmain.sh
oski-1.0.1h/doc/: Makefile.am  Makefile.in  libdep.dot  oski_dox.cfg.in
oski-1.0.1h/include/oski/: Makefile.am  Makefile.in  a_and_at.h  ata.h  blas.h  config.h  debug.h  error.h  getset.h  heur.h  heur_internal.h  heur_typedep.h  heurexport.h  init.h  kerinfo.h  matcommon.h  matcreate.h  matmodexport.h  matrix.h  mattypes_internal.h  memcpy.h  modcommon.h  modloader.h  oski.h  oski_Tic.h  oski_Tis.h  oski_Tiz.h  oski_Tlc.h  oski_Tld.h  oski_Tls.h  oski_Tlz.h  perm.h  scalinfo.h  simplelist.h  sprintf.h  structhint.h  timer.h  trace.h  userconst.h  vector.h  (+2 more)
oski-1.0.1h/libltdl/: Makefile.in  configure  configure.ac  ltdl.c
oski-1.0.1h/libltdl/autom4te.cache/: traces.0
oski-1.0.1h/lua/include/: Makefile.am  lauxlib.h  lua.h  lualib.h
oski-1.0.1h/lua/src/: Makefile.am  Makefile.in  lapi.c  lapi.h  lcode.c  lcode.h  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lgc.h  llex.c  llex.h  llimits.h  lmem.c  lobject.c  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  ltm.c  ltm.h  lundump.c  lvm.h  lzio.h
oski-1.0.1h/src/: Make.extlibs_util  Makefile.am  Makefile.build  Makefile.in  Makefile.luaoski  ata.c  getset.c  heur.c  heur_typedep.c  hint.c  inmatprop.c  matcreate.c  matmult.c  matpow.c  oski.lua.in  perm.c  structhint.c  trace_query.c  trisolve.c  tune.c
oski-1.0.1h/src/BCSR/: BCSR.lua  Make.BCSR  Make.stub  convert.c  getset.c  matmult.c
oski-1.0.1h/src/CB/: convert.c  getset.c  matmult.c  module.c
oski-1.0.1h/src/CSC/: CSC.lua  Make.stub  Makefile.am  Makefile.in  getset.c  matmult.c  module.c  trisolve.c
oski-1.0.1h/src/CSR/: CSR.lua  Make.stub  Makefile.am  Makefile.in  getset.c  module.c  transpose.c  trisolve.c
oski-1.0.1h/src/DENSE/: Make.stub  Makefile.am  Makefile.in  matmult.c  module.c  trisolve.c
oski-1.0.1h/src/GCSR/: GCSR.lua  Make.stub  Makefile.am  getset.c  matmult.c
oski-1.0.1h/src/MBCSR/: MBCSR.lua  Make.MBCSR  Make.stub  Makefile.am  README  a_and_at.c  ata.c  convert.c  matmult.c  module.c  trisolve.c
oski-1.0.1h/src/VBR/: Makefile.in  VBR.lua  getset.c  matmult.c  module.c
oski-1.0.1h/src/corelib/: blas.c  debug.c  error.c  ltdlstub.c  lua.c  malloc.c  matcommon.c  mattypes.c  modloader.c  simplelist.c  sprintf.c  trace.c
oski-1.0.1h/src/heur/: Makefile.am  Makefile.in  estfill.c
oski-1.0.1h/src/lt/: Makefile.am  modsyms.c
oski-1.0.1h/src/timer/: timer.c
oski-1.0.1h/tests/: 12-raefsky4-cut.pua  Make.test  alloc.c  ata.c  bcsr.c  blas1.c  cannes445.pha  convert.c  copy.c  create.c  csc_matmult_full_complex.c  debug.c  defs.sh  format_battery_simple.sh  getset.c  hbmatmult.c  info.c  lp_nug06-T.pua  lp_nug06.pua  make_def_test.sh  matmult_full_complex.c  multimalloc.c  raefsky6.pua  skip_test.sh  test-getset.sh  test-hba_and_at.sh  test-hbata.sh  test-heur2.sh  test.sh  test004.sh  test005.sh  test012.sh  test017.sh  test021.sh  test025.sh  test027.sh  test031.sh  test035.sh  test039.sh  test041.sh  (+13 more)
oski-1.0.1h/util/: Makefile.am  Makefile.in  abort_prog.h  array_util.c  expand.c  getcpu.c  parse_opts.c  parse_opts.h  parse_opts_typedep.c  rand_util.c  rand_util.h  readhbpat.c  readhbpat.h  stat.h  testvec.h  timing.h
poski-v1.0.0/: AUTHORS  COPYING  ChangeLog  INSTALL.sh  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap.sh  configure  configure.ac  csymx.sh
poski-v1.0.0/autom4te.cache/: output.0  requests  traces.0
poski-v1.0.0/bench/: .nfs00000000009459b800000005  Autotuner.py  Benchmarker_OSKIBench.py  CodeGen_BCSRRowMaj_Matmul.py  CodeGen_MBCSRRowMaj_Matmul.py  CodeInjector.py  InstSet_Double_x86_SSE4.py  Toolchain_GCC.py  benchmark.sh
poski-v1.0.0/config/: config-h.in~
poski-v1.0.0/doc/: poski_doxyfile
poski-v1.0.0/doc/html/: _formulas.tex  files.html  globals.html  globals_func.html  globals_vars.html  index.html  pages.html  poski__Common_8c.html  poski__InitCloseHandler_8c.html  poski__KernelHandler_8c.html  poski__Kernel__common_8c.html  poski__Kernel__matmult_8c.html  poski__LoadMatrixHandler_8c.html  poski__LoadMatrix__HB__to__CSR_8c.html  poski__LoadMatrix__MM__to__CSR_8c.html  poski__LoadMatrix__common_8c.html  poski__LogFileHandler_8c.html  poski__Malloc_8c.html  poski__MatrixHandler_8c.html  poski__Matrix__common_8c.html  poski__Matrix__getset_8c.html  poski__MessageHandler_8c.html  poski__PartitionHandler_8c.html  poski__Partition__OneD_8c.html  poski__Partition__SemiOneD_8c.html  poski__Partition__common_8c.html  poski__PermuteHandler_8c.html  poski__SysConfigureHandler_8c.html  poski__TestHandler_8c.html  (+9 more)
poski-v1.0.0/example/: Makefile  first_example.c  run_first_example.sh
poski-v1.0.0/m4/: Makefile.am  Makefile.in  ac_numa.m4  acx_csymx.m4  acx_gnu99_flags.m4  acx_pthread.m4  ax_ext.m4  ax_openmp.m4
poski-v1.0.0/oski/: install_full_oski.sh  install_oski.sh
poski-v1.0.0/src/: Makefile.am  Makefile.in
poski-v1.0.0/tests/: Dense  Makefile.am  Makefile.in  test_main.c  test_main.sh
(+2261 files in other folders)
