#
# Header files to be installed.
#

#
# Header files which are independent of the instantiated index/value types.
#
bebopincdir = $(pkgincludedir)
bebopinc_HEADERS = \
	common.h \
	config.h \
	debug.h \
	error.h \
	init.h \
	inmatprop.h \
	kerinfo.h \
	malloc.h \
	memcpy.h \
	modloader.h \
	scalinfo.h \
	simplelist.h \
	sprintf.h \
	structhint.h \
	timer.h \
	trace.h \
	userconst.h

#
# Header files which depend on the instantiated index/value types.
#
bebopTincdir = $(pkgincludedir)
bebopTinc_HEADERS = oski.h \
	oski_Tis.h oski_Tid.h oski_Tic.h oski_Tiz.h \
	oski_Tls.h oski_Tld.h oski_Tlc.h oski_Tlz.h \
	blas.h blas_names.h \
	a_and_at.h \
	ata.h \
	getset.h \
	hint.h \
	heur.h heur_internal.h heur_typedep.h heurexport.h \
	lua.h \
	mangle.h \
	matcommon.h \
	matcreate.h \
	matmodexport.h \
	matmult.h \
	matpow.h \
	matrix.h \
	mattypes.h \
	mattypes_internal.h \
	modcommon.h \
	perm.h \
	vector.h \
	trisolve.h \
	tune.h \
	vecview.h \
	xforms.h \
	xforms_internal.h

# eof
