# 
# Header files to be installed.
#

poskiincdir = $(pkgincludedir)
poskiinc_HEADERS = \
	poski.h	\
	poski_config.h	\
	poski_version.h	\
	poski_system.h	\
	poski_init.h	\
	poski_malloc.h	\
	poski_common.h	\
	poski_commontype.h	\
	poski_loadmat.h	\
	poski_loadmatcommon.h	\
	poski_loadmattype.h	\
	poski_thread.h	\
	poski_threadcommon.h	\
	poski_threadnuma.h	\
	poski_threadtype.h	\
	poski_partition.h	\
	poski_partitioncommon.h	\
	poski_partitiontype.h	\
	poski_matrix.h	\
	poski_matrixcommon.h	\
	poski_matrixgetset.h	\
	poski_matrixtype.h	\
	poski_vector.h	\
	poski_vectorcommon.h	\
	poski_vectortype.h	\
	poski_tunemat.h	\
	poski_tunematcommon.h	\
	poski_tunemattype.h	\
	poski_kernel.h	\
	poski_kernelcommon.h	\
	poski_kerneltype.h	\
	poski_matmulttype.h	\
	poski_permute.h	\
	poski_print.h	\
	poski_printcommon.h	\
	poski_test.h	
	
# eof
